--- a/portfolio/templates/portfolio/base.html
+++ b/portfolio/templates/portfolio/base.html
@@ -16,7 +16,7 @@
 
   <link rel="icon" type="image/png" href="{% static "portfolio/Logo.png" %}">
 
-  <title>Nick Walter</title>
+  <title>Dakshraj Sharma</title>
 </head>
 
 <body>
